@@ -162,7 +162,7 @@ class EditAppealAfterSubmitHandlerTest {
 
         verify(asylumCase).clear(NEW_MATTERS);
 
-        assertEquals("Completed", applicationsCaptor.getValue().get(0).getValue().getApplicationStatus());
+        assertEquals("Completed", applicationsCaptor.getValue().getFirst().getValue().getApplicationStatus());
     }
 
 
@@ -193,7 +193,7 @@ class EditAppealAfterSubmitHandlerTest {
         verify(asylumCase).clear(NEW_MATTERS);
         verify(asylumCase, never()).write(HAS_ADDED_LEGAL_REP_DETAILS, YesOrNo.YES);
 
-        assertEquals("Completed", applicationsCaptor.getValue().get(0).getValue().getApplicationStatus());
+        assertEquals("Completed", applicationsCaptor.getValue().getFirst().getValue().getApplicationStatus());
     }
 
     @Test
@@ -221,7 +221,7 @@ class EditAppealAfterSubmitHandlerTest {
 
         verify(asylumCase).clear(NEW_MATTERS);
 
-        assertEquals("Completed", applicationsCaptor.getValue().get(0).getValue().getApplicationStatus());
+        assertEquals("Completed", applicationsCaptor.getValue().getFirst().getValue().getApplicationStatus());
     }
 
     @Test
@@ -283,7 +283,7 @@ class EditAppealAfterSubmitHandlerTest {
 
         verify(asylumCase).clear(NEW_MATTERS);
 
-        assertEquals("Completed", applicationsCaptor.getValue().get(0).getValue().getApplicationStatus());
+        assertEquals("Completed", applicationsCaptor.getValue().getFirst().getValue().getApplicationStatus());
     }
 
     @Test
@@ -308,7 +308,7 @@ class EditAppealAfterSubmitHandlerTest {
 
         verify(asylumCase).clear(NEW_MATTERS);
 
-        assertEquals("Completed", applicationsCaptor.getValue().get(0).getValue().getApplicationStatus());
+        assertEquals("Completed", applicationsCaptor.getValue().getFirst().getValue().getApplicationStatus());
     }
 
     @Test
@@ -333,7 +333,7 @@ class EditAppealAfterSubmitHandlerTest {
 
         verify(asylumCase).clear(NEW_MATTERS);
 
-        assertEquals("Completed", applicationsCaptor.getValue().get(0).getValue().getApplicationStatus());
+        assertEquals("Completed", applicationsCaptor.getValue().getFirst().getValue().getApplicationStatus());
     }
 
     @Test
@@ -358,7 +358,7 @@ class EditAppealAfterSubmitHandlerTest {
 
         verify(asylumCase).clear(NEW_MATTERS);
 
-        assertEquals("Completed", applicationsCaptor.getValue().get(0).getValue().getApplicationStatus());
+        assertEquals("Completed", applicationsCaptor.getValue().getFirst().getValue().getApplicationStatus());
     }
 
     @Test
