@@ -1,21 +1,5 @@
 package uk.gov.hmcts.reform.iacaseapi.domain.handlers.presubmit;
 
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.fail;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.powermock.api.mockito.PowerMockito.when;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.UPLOAD_SENSITIVE_DOCS;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.UPLOAD_SENSITIVE_DOCS_FILE_UPLOADS;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.UPLOAD_SENSITIVE_DOCS_IS_APPELLANT_RESPONDENT;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
 import lombok.Value;
 import org.assertj.core.api.Assertions;
 import org.jetbrains.annotations.NotNull;
@@ -44,6 +28,19 @@ import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.Document;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.IdValue;
 import uk.gov.hmcts.reform.iacaseapi.domain.service.DocumentReceiver;
 import uk.gov.hmcts.reform.iacaseapi.domain.service.DocumentsAppender;
+
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.fail;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.*;
+import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.*;
 
 @MockitoSettings(strictness = Strictness.LENIENT)
 @ExtendWith(MockitoExtension.class)
@@ -100,7 +97,7 @@ class UploadSensitiveDocsAboutToSubmitHandlerTest {
             actualResponse.getData().read(UPLOAD_SENSITIVE_DOCS);
 
         if (actualUploadSensitiveDocsOptional.isPresent()) {
-            assertEquals(someDocWithMetadata, actualUploadSensitiveDocsOptional.get().get(0).getValue());
+            assertEquals(someDocWithMetadata, actualUploadSensitiveDocsOptional.get().getFirst().getValue());
         } else {
             fail("expected sensitive document not found");
         }
@@ -110,7 +107,7 @@ class UploadSensitiveDocsAboutToSubmitHandlerTest {
 
         verify(documentReceiver, times(1))
             .tryReceiveAll(docWithDescListCaptor.capture(), eq(DocumentTag.SENSITIVE_DOCUMENT), eq(suppliedBy));
-        assertEquals(uploadedSensitiveDoc, docWithDescListCaptor.getValue().get(0).getValue());
+        assertEquals(uploadedSensitiveDoc, docWithDescListCaptor.getValue().getFirst().getValue());
 
     }
 
