@@ -60,7 +60,7 @@ class DecideCostsPreparerTest {
             decideCostsPreparer.handle(PreSubmitCallbackStage.ABOUT_TO_START, callback);
 
         assertNotNull(callbackResponse);
-        verify(asylumCase, times(1)).write(DECIDE_COSTS_APPLICATION_LIST, new DynamicList(applyForCostsList.get(0), applyForCostsList));
+        verify(asylumCase, times(1)).write(DECIDE_COSTS_APPLICATION_LIST, new DynamicList(applyForCostsList.getFirst(), applyForCostsList));
     }
 
     @Test
