@@ -4,16 +4,15 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import org.elasticsearch.index.query.QueryBuilders;
-import org.elasticsearch.index.query.TermsQueryBuilder;
-import org.elasticsearch.search.builder.SearchSourceBuilder;
-import org.elasticsearch.search.sort.SortOrder;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -45,41 +44,34 @@ class CcdSupplementaryDetailsSearchServiceTest {
     private static final int THREAD_POOL_SIZE = 10;
     private final String authorisation = "Bearer token";
     private final String serviceToken = "Bearer serviceToken";
-
     private final String caseType = "Asylum";
     private final long caseId = 1234;
     private final List<String> ccdCaseNumberList = Arrays.asList("11111111111111", "22222222222222", "99999999999999");
 
-    SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
     private Map<String, Object> data = new HashMap<>();
     private ExecutorService executorService;
+    private String expectedQuery;
 
     @BeforeEach
     void setUp() {
         data = new HashMap<>();
         data.put("appellantFamilyName", "Johnson");
 
-        TermsQueryBuilder termQueryBuilder = QueryBuilders.termsQuery("reference", ccdCaseNumberList);
-        searchSourceBuilder.size(MAX_RECORDS);
-        searchSourceBuilder.from(0);
-        searchSourceBuilder.sort("created_date", SortOrder.DESC);
-        searchSourceBuilder.query(termQueryBuilder);
+        expectedQuery = buildExpectedQuery(ccdCaseNumberList, MAX_RECORDS);
 
         executorService = Executors.newFixedThreadPool(THREAD_POOL_SIZE);
 
         when(idamService.getServiceUserToken()).thenReturn("Bearer token");
         when(s2sAuthTokenGenerator.generate()).thenReturn(serviceToken);
-
-        when(coreCaseDataApi.searchCases(authorisation, serviceToken, caseType,
-                                         searchSourceBuilder.toString()
-        )).thenReturn(searchResult);
+        when(coreCaseDataApi.searchCases(authorisation, serviceToken, caseType, expectedQuery))
+                .thenReturn(searchResult);
 
         ccdSupplementaryDetailsSearchService = new CcdSupplementaryDetailsSearchService(
-            idamService,
-            coreCaseDataApi,
-            s2sAuthTokenGenerator,
-            executorService,
-            MAX_RECORDS
+                idamService,
+                coreCaseDataApi,
+                s2sAuthTokenGenerator,
+                executorService,
+                MAX_RECORDS
         );
     }
 
@@ -90,24 +82,58 @@ class CcdSupplementaryDetailsSearchServiceTest {
         when(caseDetails.getCaseData()).thenReturn(data);
 
         List<SupplementaryInfo> supplementaryInfoList =
-            ccdSupplementaryDetailsSearchService.getSupplementaryDetails(ccdCaseNumberList);
+                ccdSupplementaryDetailsSearchService.getSupplementaryDetails(ccdCaseNumberList);
 
         assertEquals(1, supplementaryInfoList.size());
-        assertEquals("1234", supplementaryInfoList.get(0).getCcdCaseNumber());
-        assertEquals("Johnson", supplementaryInfoList.get(0).getSupplementaryDetails().getSurname());
+        assertEquals("1234", supplementaryInfoList.getFirst().getCcdCaseNumber());
+        assertEquals("Johnson", supplementaryInfoList.getFirst().getSupplementaryDetails().getSurname());
 
         verify(idamService).getServiceUserToken();
-        verify(coreCaseDataApi).searchCases(authorisation, serviceToken, caseType, searchSourceBuilder.toString());
+        verify(coreCaseDataApi).searchCases(authorisation, serviceToken, caseType, expectedQuery);
     }
 
     @Test
     void should_handle_error() {
-
         List<SupplementaryInfo> supplementaryInfoList =
-            ccdSupplementaryDetailsSearchService.getSupplementaryDetails(ccdCaseNumberList);
+                ccdSupplementaryDetailsSearchService.getSupplementaryDetails(ccdCaseNumberList);
 
         assertEquals(0, supplementaryInfoList.size());
         verify(idamService).getServiceUserToken();
-        verify(coreCaseDataApi).searchCases(authorisation, serviceToken, caseType, searchSourceBuilder.toString());
+        verify(coreCaseDataApi).searchCases(authorisation, serviceToken, caseType, expectedQuery);
+    }
+
+    // Mirrors buildSearchQuery() in the service exactly
+    private String buildExpectedQuery(List<String> caseReferences, int maxRecords) {
+        try {
+            ObjectMapper mapper = new ObjectMapper();
+            ObjectNode root = mapper.createObjectNode();
+
+            root.put("size", maxRecords);
+            root.put("from", 0);
+
+            ArrayNode sortArray = mapper.createArrayNode();
+            ObjectNode sortField = mapper.createObjectNode();
+            ObjectNode sortOrder = mapper.createObjectNode();
+            sortOrder.put("order", "desc");
+            sortField.set("created_date", sortOrder);
+            sortArray.add(sortField);
+            root.set("sort", sortArray);
+
+            ArrayNode valuesArray = mapper.createArrayNode();
+            caseReferences.forEach(valuesArray::add);
+
+            ObjectNode termsNode = mapper.createObjectNode();
+            termsNode.set("reference", valuesArray);
+            termsNode.put("boost", 1.0);
+
+            ObjectNode queryNode = mapper.createObjectNode();
+            queryNode.set("terms", termsNode);
+
+            root.set("query", queryNode);
+
+            return mapper.writeValueAsString(root);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to build expected ES query", e);
+        }
     }
 }
